fixed sidenav, first item not visible
Fix: main app

margin-top set to 64px(height of navbar). First item in menu (science) was hidden under "All", margin pushed all down and it is in proper place now.

--- a/_app/css/chutter.sass
+++ b/_app/css/chutter.sass
@@ -111,6 +111,7 @@ table
 md-sidenav
   z-index: 19
   overflow: hidden
+  margin-top: 64px
 
 
 post
